# multimodal-rag-system-apr2026

./: .env.example  README.md  _test_docling.py  main.py  multimodal-rag-implementation-guide.md  pyproject.toml  schema.sql
references/: current-implementation-against-features.md  improvement-plans.md  multimodal-rag-implementation-guide.md  multimodal-rag-process.md
src/api/v1/routes/: query.py
src/api/v1/services/: query_service.py
src/core/: db.py
src/ingestion/: docling_parser.py  ingestion.py
